# serialization-perf

./: .gitignore  .gitmodules  Makefile  README.md  graph.py  plot_results  run_tests  test.csv
framework/: graph.py
schemas/cpp/: Makefile.am  configure.ac
schemas/cpp/openconfig/enums/: enums.pb.cc  enums.pb.h
schemas/cpp/openconfig/ietf_interfaces/: ietf_interfaces.pb.cc  ietf_interfaces.pb.h
schemas/cpp/openconfig/openconfig_access_points/: openconfig_access_points.pb.h
schemas/cpp/openconfig/openconfig_acl/: openconfig_acl.pb.cc  openconfig_acl.pb.h
schemas/cpp/openconfig/openconfig_ap_manager/: openconfig_ap_manager.pb.cc  openconfig_ap_manager.pb.h
schemas/cpp/openconfig/openconfig_channel_monitor/: openconfig_channel_monitor.pb.cc  openconfig_channel_monitor.pb.h
schemas/cpp/openconfig/openconfig_interfaces/: openconfig_interfaces.pb.h
schemas/cpp/openconfig/openconfig_lacp/: openconfig_lacp.pb.cc  openconfig_lacp.pb.h
schemas/cpp/openconfig/openconfig_lldp/: openconfig_lldp.pb.cc  openconfig_lldp.pb.h
schemas/cpp/openconfig/openconfig_module_catalog/: openconfig_module_catalog.pb.cc  openconfig_module_catalog.pb.h
schemas/cpp/openconfig/openconfig_optical_amplifier/: openconfig_optical_amplifier.pb.cc  openconfig_optical_amplifier.pb.h
schemas/cpp/openconfig/openconfig_platform/: openconfig_platform.pb.cc  openconfig_platform.pb.h
schemas/cpp/openconfig/openconfig_probes/: openconfig_probes.pb.cc  openconfig_probes.pb.h
schemas/cpp/openconfig/openconfig_qos/: openconfig_qos.pb.cc  openconfig_qos.pb.h
schemas/cpp/openconfig/openconfig_relay_agent/: openconfig_relay_agent.pb.cc  openconfig_relay_agent.pb.h
schemas/cpp/openconfig/openconfig_spanning_tree/: openconfig_spanning_tree.pb.cc  openconfig_spanning_tree.pb.h
schemas/cpp/openconfig/openconfig_system/: openconfig_system.pb.cc  openconfig_system.pb.h
schemas/cpp/openconfig/openconfig_telemetry/: openconfig_telemetry.pb.cc  openconfig_telemetry.pb.h
schemas/cpp/openconfig/openconfig_terminal_device/: openconfig_terminal_device.pb.cc  openconfig_terminal_device.pb.h
schemas/cpp/openconfig/openconfig_transport_line_protection/: openconfig_transport_line_protection.pb.cc  (+1 more)
schemas/cpp/proto_generator/: main.cpp
schemas/cpp/tester/: main.cpp
(+41 files in other folders)
